--- a/escom-bpm-web/src/main/webapp/view/docs/doc-places.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-places.xhtml
@@ -3,7 +3,7 @@
                  xmlns:p="http://primefaces.org/ui">
 
     <p:tab title="#{bundle.PlacesDocStorage}" >
-        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12" >
+        <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12" >
             <p:outputLabel value="#{bundle.Folder}:" />
             <p:inputText value="#{_bean.editedItem.path}" readonly="true" styleClass="ui-grid-col-12"/>            
         </p:panelGrid>
