--- a/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docStatus/statusesdoc-card.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="page_body">
                 
           <p:tab id="cardTab" title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 col-padding">
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding">
                 <p:outputLabel value="#{bundle.Name}" indicateRequired="true"/>
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
                              styleClass="ui-grid-col-12"
