--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-group-card.xhtml
@@ -7,7 +7,7 @@
     
     <ui:define name="page_body">
         <p:tab title="#{bundle.Explorer}">
-            <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank" columnClasses="ui-grid-col-12" >
+            <p:panelGrid columns="1" styleClass="ui-grid-col-12 col-padding" columnClasses="ui-grid-col-12" >
                 <p:outputLabel value="#{bundle.Name}" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}"
                              styleClass="ui-grid-col-12"
