--- a/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/partners/groups/partnergroup-card.xhtml
@@ -16,7 +16,7 @@
 
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">
-            <p:panelGrid columns="1" styleClass="ui-grid-col-12 ui-panelgrid-blank col-padding" columnClasses="ui-grid-col-12">                
+            <p:panelGrid columns="1" styleClass="ui-grid-col-12 col-padding" columnClasses="ui-grid-col-12">                
                     
                 <p:outputLabel value="#{bundle.Name}:" indicateRequired="true" />
                 <p:inputText value="#{_bean.editedItem.name}" id="nameItem" styleClass="ui-grid-col-12"
