--- a/escom-bpm-web/src/main/webapp/view/common/dict-details.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-details.xhtml
@@ -4,7 +4,7 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">    
 
-    <p:panelGrid id="panelDetail" columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">        
+    <p:panelGrid id="panelDetail" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">        
         <p:dataTable value="#{_bean.details}" var="item"
                      emptyMessage="#{bundle.EmptyTable}" rowKey="#{item.tempId}"
                      selection="#{_bean.checkedDetails}"
