--- a/escom-bpm-web/src/main/webapp/view/common/dict-log.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-log.xhtml
@@ -5,7 +5,7 @@
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <p:tab title="#{bundle.LogEventHistory}">
-        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-panelgrid-blank ui-grid-col-12">
+        <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-panelgrid-blank ui-grid-col-12">
             <p:dataTable id="logTbl" var="log" value="#{_bean.editedItem.itemLogs}" 
                          emptyMessage="#{bundle.EmptyTable}"
                          paginator="true" paginatorPosition="bottom"  
