--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
@@ -6,7 +6,7 @@
 
     <p:tab title="#{_bean.getRightsForObjectTitle()}" rendered="#{_bean.editedItem != null}">
 
-        <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12" >
+        <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12" >
             <p:panelGrid columns="2" columnClasses="ui-grid-col-1, ui-grid-col-11" styleClass="ui-grid-col-12" >
                 <p:selectBooleanCheckbox value="#{_bean.editedItem.inherits}"                                 
                                          disabled="#{_bean.isReadOnly() || !_bean.isHaveRightChangeRight()}"                                     
