--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -11,7 +11,7 @@
     
     <ui:define name="page_body">       
         <p:tab title="#{bundle.Document}" id="tabDocCard" >
-            <p:panelGrid id="panelDocCard" columns="1" columnClasses="ui-grid-col-12 without-spaces" styleClass="without-spaces ui-grid-col-12">
+            <p:panelGrid id="panelDocCard" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12">
                 
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
                     <h:panelGrid columns="1" styleClass="without-spaces ui-grid-col-12">
@@ -137,7 +137,7 @@
         </p:tab> 
         
         <p:tab title="#{bundle.Processes}" rendered="#{applicationBean.licence.isCanUses(DictModules.MODULE_PROCESSES)}">
-            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12">
                 <ui:include src="/view/processes/process-list.xhtml"> 
                     <ui:param name="_processes" value="#{docCardBean.editedItem.processList}"/>
                 </ui:include>
