--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -16,7 +16,7 @@
 
     <ui:define name="centerFormContent">   
 
-        <p:panelGrid columns="1" layout="grid" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">            
+        <p:panelGrid columns="1" layout="grid" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 ui-panelgrid-blank">            
             <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
                 <p:graphicImage name="/images/escom_logo.jpg"  /> 
                 <h:panelGroup styleClass="ui-grid-col-12">
@@ -27,7 +27,7 @@
             </p:panelGrid>            
         </p:panelGrid>
 
-        <p:panelGrid columns="1" rendered="#{attacheBean.content != null}" columnClasses="ui-grid-col-12" styleClass="without-spaces ui-grid-col-12">
+        <p:panelGrid columns="1" rendered="#{attacheBean.content != null}" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12">
             <pe:documentViewer value="#{attacheBean.content}" height="750" style="width: 100%;"/>                        
         </p:panelGrid>
     </ui:define>
