--- a/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/docTypes/doctype-card.xhtml
@@ -11,7 +11,7 @@
     <ui:define name="page_body">
 
         <p:tab title="#{bundle.Explorer}">     
-            <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 ui-panelgrid-blank">
+            <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
 
                 <p:outputLabel value="#{bundle.Name}:" indicateRequired="true" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
