--- a/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-explorer.xhtml
@@ -18,23 +18,19 @@
         #{_detailBean != null ? _bean.setTableBean(_detailBean)  : ''}
         #{_treeBean   != null ? _bean.setTreeBean(_treeBean) : ''}
 
-        <pe:layout fullPage="true"  style="font-size: 80%;" >
+        <pe:layout fullPage="true"  style="font-size: 80%;" stateCookie="true">
             <pe:layoutPane id="west" position="west" rendered="#{_bean.isWestShow()}" size="25%" >                  
                 <h:form id="westFRM" style="font-size: 90%;  height: 100%;" onkeypress="checkEsc();">
-                    <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
-                        <ui:include src="/view/templ/tree/tree.xhtml" />                
-                    </p:panel>
+                    <ui:include src="/view/templ/tree/tree.xhtml" />                
                 </h:form>
             </pe:layoutPane>
 
             <pe:layoutPane id="east" position="east" rendered="#{_bean.isEastShow()}" size="25%">                
                 <h:form id="eastFRM" style="font-size: 90%;  height: 100%;" onkeypress="checkEsc();">
-                    <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
-                        <p:focus context="eastFRM" for="eastFRM:nameSearche"/>                                        
-                        <ui:include src="/view/templ/templ-searche.xhtml">
-                            <ui:param name="_tblUpdate" value="mainFRM westFRM #{_updates}"/>
-                        </ui:include>
-                    </p:panel>
+                    <p:focus context="eastFRM" for="eastFRM:nameSearche"/>                                        
+                    <ui:include src="/view/templ/templ-searche.xhtml">
+                        <ui:param name="_tblUpdate" value="mainFRM westFRM #{_updates}"/>
+                    </ui:include>
                 </h:form>
             </pe:layoutPane>
 
@@ -51,7 +47,7 @@
                         });
                     </script>
 
-                    <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
+                    <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: auto;" >
                         <f:facet name="header">
                             #{_bean.getFormHeader()}
                         </f:facet>
@@ -110,20 +106,12 @@
                                     </span>
 
                                     <p:commandButton id="createItemBtn" icon="ui-icon-circle-plus" 
-                                                     title="#{_bean.canCreateItem ? bundle.ForCreateObjectNeedSelectGroup : _CreateItemLabel}" 
+                                                     title="#{_CreateItemLabel}" 
                                                      disabled="#{_bean.canCreateItem}"
-                                                     rendered="#{_treeBean == null or _bean.isShowTree()}"
-                                                     style="#{_bean.selectorViewMode ? 'display: none;' : ''}"
+                                                     rendered="#{_treeBean == null or _bean.isShowTree()}"                                                     
                                                      actionListener="#{_bean.onCreateDetailItem()}">
                                         <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND();"/>
-                                    </p:commandButton>
-
-                                    <p:commandButton value="#{_CreateItemLabel}" icon="ui-icon-plus" 
-                                                     disabled="#{_treeBean != null and _bean.treeSelectedNode == null}"
-                                                     rendered="#{!_bean.isTrashSelected() and _bean.selectorViewMode}"
-                                                     actionListener="#{_bean.onCreateDetailItem()}">
-                                        <p:ajax event="dialogReturn" update="mainFRM" listener="#{_bean.onUpdateAfterCloseForm}" oncomplete="initDND();"/>
-                                    </p:commandButton>
+                                    </p:commandButton>                                    
 
                                     <p:commandButton value="#{bundle.SelectChecked}" icon="ui-icon-check" 
                                                      title="#{bundle.SelectChecked}"
